fix vertical overflow for PopUp

--- a/style.css
+++ b/style.css
@@ -352,7 +352,6 @@ body {
   background: #fff;
   border: 2px solid #dfe1e6;
   border-radius: 12px;
-  height: 94vh;
   box-sizing: border-box;
 }
 
